--- a/client/.env.template
+++ b/client/.env.template
@@ -1,22 +1,22 @@
-# 默认用户密码，用户名为 root，每次重启时会自动更新。
+# Default user password, username root, updated automatically on each reboot.
 DEFAULT_ROOT_PSW=123456
-# 数据库最大连接数
+# Maximum number of database connections
 DB_MAX_LINK=5
 # token
 TOKEN_KEY=dfdasfdas
-# 文件阅读时的秘钥
+# Secret key for file reading
 FILE_TOKEN_KEY=filetokenkey
-# root key, 最高权限
+# root key, highest privilege
 ROOT_KEY=fdafasd
-# openai 基本地址，可用作中转。
+# openai base address, can be used as transit.
 OPENAI_BASE_URL=https://api.openai.com/v1
-# oneapi 地址，可以使用 oneapi 来实现多模型接入
+# oneapi address, can use oneapi to realize multi-model access
 # ONEAPI_URL=https://xxxx.cloud.sealos.io/openai/v1
-# 通用key。可以是 openai 的也可以是 oneapi 的。
-# 此处逻辑：优先走 ONEAPI_URL，如果填写了 ONEAPI_URL，key 也需要是 ONEAPI 的 key
-CHAT_API_KEY=sk-xxxx
+# Generic key, can be openai or oneapi.
+# Logic here: give priority to ONEAPI_URL, if you fill in ONEAPI_URL, the key should also be ONEAPI key.
+CHAT_API_KEY=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
 # db
-MONGODB_URI=mongodb://username:password@0.0.0.0:27017/fastgpt?authSource=admin
-PG_URL=postgresql://username:password@host:port/postgres
-# 首页路径
+MONGODB_URI=mongodb+srv://satyasumans:wolverine@cluster0.kj16vry.mongodb.net/?retryWrites=true&w=majority
+PG_URL=postgresql://:password@host:port/postgres
+# Home page path
 HOME_URL=/
